[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pk-ai-tools"
version = "0.1.0"
description = "Simple RAG pipeline + document ingestion utilities (LangChain + Chroma + Ollama)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Paul Kviding" }
]
keywords = ["rag", "langchain", "chroma", "ollama", "retrieval", "embeddings"]

# Core deps your code relies on
dependencies = [
  "langchain",
  "langchain-community",
  "langchain-chroma",
  "langchain-text-splitters",
  "langchain-ollama",
  "ollama",
  "pandas",
  "requests",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/paulkv905/pk-ai-tools"
Issues = "https://github.com/paulkv905/pk-ai-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pk_ai_tools"]
